--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,14 @@
 version: '3.8'
 
 services:
-
-  api:
-    build: ./backend
-    ports:
-      - "4000:4000"
-    environment:
-      DATABASE_URL: postgres://postgres:password@db:5432/mydb
-      RABBITMQ_URL: amqp://guest:guest@rabbitmq:5672
-      REDIS_URL: redis://redis:6379
-      JWT_SECRET: my-secret-key
-    depends_on:
-      - db
-      - rabbitmq
-      - redis
-
-  frontend:
-    build: ./frontend
-    ports:
-      - "3000:3000"
-    depends_on:
-      - api
-
   db:
     image: postgres:16-alpine
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: mydb
-    ports:
-      - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres || exit 1"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       retries: 5
 
@@ -40,9 +16,30 @@ services:
     image: rabbitmq:3-management-alpine
     ports:
       - "5672:5672"
-      - "15672:15672" # RabbitMQ management console for debugging
+      - "15672:15672"
 
   redis:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+
+  api:
+    image: node:20-alpine      # no build, just use the official Node image
+    working_dir: /app
+    volumes:
+      - ./order-api:/app       # mount your Nest source in
+      - /app/node_modules      # keep container node_modules
+    command: sh -c "npm ci && npm run start:dev"
+    ports:
+      - "4000:4000"
+    environment:
+      DATABASE_URL: postgres://postgres:password@db:5432/mydb
+      RABBITMQ_URL:   amqp://guest:guest@rabbitmq:5672
+      REDIS_URL:      redis://redis:6379
+    depends_on:
+      db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_started
+      redis:
+        condition: service_started
