feat: integrate caching and messaging with RabbitMQ and Redis support

--- a/order-api/package.json
+++ b/order-api/package.json
@@ -18,16 +18,20 @@
     "test:cov": "jest --coverage",
     "test:e2e:run": "jest --config ./test/jest-e2e.json",
     "test:e2e": "docker compose -f ../docker-compose.test.yml up --abort-on-container-exit --exit-code-from test"
-
   },
   "dependencies": {
+    "@golevelup/nestjs-rabbitmq": "^6.0.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.8.2",
+    "amqplib": "^0.10.8",
+    "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "ioredis": "^5.6.1",
     "prisma": "^6.8.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
