--- a/order-api/tsconfig.json
+++ b/order-api/tsconfig.json
@@ -8,6 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2023",
     "sourceMap": true,
+    "types": ["jest", "node"],
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
@@ -17,5 +18,12 @@
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "noFallthroughCasesInSwitch": true
-  }
+  },
+  "include": [
+        "./src/**/*.ts",
+        "./src/**/*.json",
+        "./src/global.d.ts",
+        "./test/**/*.ts"
+    ]
+  
 }
