--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,3 +43,15 @@ services:
         condition: service_started
       redis:
         condition: service_started
+
+  frontend:
+    build: ./frontend
+    volumes:
+      - frontend_node_modules:/app/node_modules
+      - ./frontend:/app               
+    ports:
+      - "3000:5173"     # Vite default port is 5173
+    depends_on:
+      - api
+volumes:
+  frontend_node_modules:
