--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,10 @@ services:
   frontend:
     build: ./frontend
     volumes:
-      - frontend_node_modules:/app/node_modules
-      - ./frontend:/app               
+      # 1) bind the host code in first
+      - ./frontend:/app
+      # 2) then overlay the node_modules volume on top of /app/node_modules
+      - frontend_node_modules:/app/node_modules            
     ports:
       - "3000:5173"     # Vite default port is 5173
     depends_on:
